fix: footer now centers on smaller screen sizes than previously

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -90,7 +90,7 @@ body > footer {
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
 	body > footer {
 		text-align: center;
     margin: auto;
